RegressionTests/TestSuiteExport/reject/inline_asm_invalid_flag_effect.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmInvalidFlagEffect

fn f() void {
    var x: u32 = 0;
    asm {
        MOV {x}, {x} WQ
    };
}
